# OOPLabs

./: README.md  lab1.2.7z
lab1/: Config.cpp  main.cpp
lab1.2/: 1.ini  CMakeLists.txt  Config.cpp  main.cpp
lab2/: Action.cpp  Action.h  CMakeLists.txt  Item.cpp  Item.h  Shop.cpp  Shop.h  main.cpp  shopDetails.cpp  shopDetails.h  shopStock.cpp  shopStock.h
lab3/: AirRace.cpp  AirRace.h  AllTerrainBoots.cpp  AllTerrainBoots.h  BactrianCamel.cpp  BactrianCamel.h  Broom.cpp  Broom.h  CMakeLists.txt  Centaur.cpp  Centaur.h  FlyingTransport.cpp  FlyingTransport.h  GroundRace.cpp  GroundRace.h  GroundTransport.cpp  GroundTransport.h  MagicCarpet.cpp  MagicCarpet.h  MixedRace.cpp  MixedRace.h  Mortar.cpp  Mortar.h  Race.cpp  Race.h  SpeedCamel.cpp  SpeedCamel.h  Transport.cpp  Transport.h  main.cpp
lab4/: BackUpPoint.cpp  BackUpPoint.h  Backup.cpp  Backup.h  CMakeLists.txt  Expired.cpp  Expired.h  ExpiredByDate.cpp  ExpiredByDate.h  ExpiredByMixed.cpp  ExpiredByMixed.h  ExpiredByNumber.cpp  ExpiredByNumber.h  ExpiredBySize.cpp  ExpiredBySize.h  File.cpp  File.h  Time.cpp  Time.h  main.cpp  tmp
lab5/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  CreditAccount.cpp  CreditAccount.h  DebitAccount.cpp  DebitAccount.h  DepositAccount.cpp  DepositAccount.h  Interactions.cpp  Interactions.h  Time.cpp  Time.h  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/BL/DTO/: EmployeeDTO.cpp  EmployeeDTO.h  EntitieDTO.cpp  EntitieDTO.h  ReportDTO.cpp  ReportDTO.h  (+2 more)
lab6/DAL/: Time.cpp  Time.h
lab6/PL/: Action.cpp  Action.h
(+24 files in other folders)
